# cpp_tojsonl

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: converter.h  parquet_converter.h  text_converter.h
src/: main.cpp  parquet_converter.cpp  text_converter.cpp
